--- a/style.scss
+++ b/style.scss
@@ -2,7 +2,8 @@ body{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    overflow: hidden;
+    overflow-x: hidden;
+    overflow-y: scroll;
 }
 
 $primary_blue: #2752EA;
@@ -34,6 +35,11 @@ $primary_gray: #F2F2F4;
         height: 40px;
         border: none;
         font-weight: 500;
+        transition: 0.2s linear;
+        &:hover{
+            background-color: #27eacd55;
+    color: white;
+        }
     }
     li{
         padding-left: 30px;
@@ -41,6 +47,7 @@ $primary_gray: #F2F2F4;
         text-shadow: 1px 0.5px 5px rgba(0, 0, 0, 0.384);
     }
 }
+
 
 .lefthalf{
     flex-direction: column;
@@ -90,3 +97,61 @@ input[type="search"]::-webkit-search-decoration,
 input[type="search"]::-webkit-search-cancel-button,
 input[type="search"]::-webkit-search-results-button,
 input[type="search"]::-webkit-search-results-decoration { display: none; }
+
+
+// // seconddddddddddddddddddddddddddddddddddddddd
+
+// // .secondpage{
+// //     width: 100vw;
+// //     height: 100vh;
+// // }
+// .container-2 {
+//     margin-top: 60px;
+//     display: flex;
+//     justify-content: space-between;
+//   }
+  
+//   .section-2 {
+//     padding-top: 100px;
+//     padding-left: 200px;
+//   }
+  
+//   .image img {
+//     width: 440px;
+//   }
+  
+//   .location h4 {
+//     font-weight: 800;
+//   }
+  
+//   .location input {
+//     width: 380px;
+//   }
+  
+//   .skills select {
+//     width: 200px;
+//   }
+  
+//   .skills h4 {
+//     font-size: 20px;
+//   }
+  
+//   .years select {
+//     width: 100px;
+//   }
+  
+//   .years h4 {
+//     font-weight: 800;
+//     font-size: 20px;
+//   }
+  
+//   .years_skills {
+//     padding-top: 80px;
+//     display: flex;
+//   }
+  
+//   .years {
+//     padding-left: 80px;
+//   }
+  
+
